dist/LineScript-win64-20260615/tests/cases/compile_fail/old_let_keyword.lsc
main() -> i64 do
  let x = 1
  return x
end
